✨ fix: update mapper usage